--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "3.0.0"
-    , "jade": ">= 0.0.1"
+    "name": "application-name", 
+    "version": "0.0.1", 
+    "private": true, 
+    "dependencies": {
+      "express": "3.0.0", 
+      "jade": ">= 0.0.1",
+      "natural": "*",
+      "coffee-script": "*",
+      "underscore": "*",
+      "jquery": "*"
   }
 }
