--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "application-name", 
     "version": "0.0.1", 
     "private": true, 
+    "main": "app.js",
     "dependencies": {
       "express": "3.0.0", 
       "jade": ">= 0.0.1",
