--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "application-name", 
     "version": "0.0.1", 
     "private": true, 
-    "main": "app.js",
+    "main": "server.js",
     "dependencies": {
       "express": "3.0.0", 
+      "express-csv": "*",
       "jade": ">= 0.0.1",
       "natural": "*",
       "coffee-script": "*",
