--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "express": "3.0.0", 
       "express-csv": "*",
       "jade": ">= 0.0.1",
+      "async": "*",
       "natural": "*",
       "coffee-script": "*",
       "underscore": "*",
