commiting before collaborating on nod-mongo

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "express-csv": "*",
       "jade": ">= 0.0.1",
       "async": "*",
+      "node-sass": "*",
       "natural": "*",
       "coffee-script": "*",
       "underscore": "*",
